# cheat-at-wordle

./: Dockerfile  README.md  docker-install-packages.sh  pyproject.toml
wordle/: wordle.py
wordle/wordle/: wordle.py
